
   * Fix handling of custom layouts, which used unicode internally. (#306629)

   * Mark as compatible with Bazaar 1.11.

   * Fix pointless commits when using roundtripping using revision 
     properties. (#299943)

   * Make sure branches are properly removed in iter_all_changes(). 
     (#306288, #300006)

   * Handle pushing empty branches using dpush. (#311613)

bzr-svn 0.5.0~rc1			2008-12-08

  CHANGES

   * Implement set-revprops command.

   * Introduces a new Bzr<->Svn mapping format. Please 
     read UPGRADING for details.
	 
	 + Uses revision properties where possible. (#127736)

     + Branching schemes are no longer used and are 
	   replaced by "repository layouts", which are 
	   much more flexible. (#130372)

   * Will avoid browsing the full repository for bzr-revisions, 
     only closely related paths. (#158657)

  FEATURES

   * Performance has been improved *significantly*.

   * Add bzr:skip revision property to allow skipping 
     more detailed analysis of revisions not created by bzr.

   * "bzr revert" in a Subversion working tree now works.

   * Create branches/ directory automatically if it didn't exist
     when pushing merged revisions.

   * Only fetch signatures if they can be cheaply copied.

   * Also upgrade fileids in workingtree during svn-upgrade.

   * Add --until option to svn-import.

   * Add experimental svn-serve subcommand.

  BUG FIXES

   * Set bzr signature revision property during commit if possible.

   * Provide SvnWorkingTree._transport. (#264548)

   * Don't rely on cache when checking revision id during commit. (#230863)

   * Avoid pushing changes again when pushing new branch. (#203368)

   * Store text parents properly. (#260416)

   * Avoid leaking memory when attempting to open an invalid Subversion 
     repository. (#262513)

   * Fix corner case corruption pulling from a svn repository that contains bzr-roundtripped 
     revisions. (#260416)

   * Upgrade tags as well during svn-upgrade.
